added inventory and payment services + updates